# HackathonSIA2026

./: LICENSE  README.md  api.py  main.py  pyproject.toml
back/: api.py  dev_dk.py  main.py  pyproject.toml
back/data/processed/: pdf.json
back/data/raw/excel/: SI24BT004IGS.xlsx  SI25BT006IGS_Olive_Nursery-20260224111539.xlsx
back/data/reference/: erroneous_refs.json  raw_vitis_crop_ontology.json  refs.json  refs_clean.json
back/outputs/: result.json  results.json
back/prompts/v1/: prompt_simple.txt  prompt_structured_english.txt
back/prompts/v2/: prompt_targeted_extraction.txt  prompt_targeted_extraction_v2.txt  prompt_targeted_extraction_v3.txt
back/scripts/: run_extraction.sh
back/src/: __init__.py  classes.py  embedding.py  ocr_extractor.py
back/src/embedding/: embedding.py
back/src/extracting/: Extraction_excel.py  ReadMeExtracting.md  lm_studio_client.py  main.py  pdf_to_text.py
back/src/extracting/old/: main copy.py  main_extractor.py  main_v2.py  main_v3.py
back/src/matching/: matching_llm.py
data/input_excel/: SI24BT003IGS-GR01.xlsx  SI24BT004IGS_Grapevine-20260223134943.xlsx
data/reference/: refs.json
front/: plan.md  requirements.txt  rxconfig.py
front/assets/: test_var_rapprochement(1).xlsx  test_var_rapprochement.xlsx
front/visualisation_analyse_flux/: visualisation_analyse_flux.py
frontv2/hackathon/: package-lock.json  package.json
outputs/: result.json  results.json
src/: Extraction_excel.py  classes.py  config.py  lm_studio_client.py  main.py  main_extractor.py  matching_llm.ipynb  matching_llm.py
(+24 files in other folders)
