[project]
name = "hackathonsia2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "jupyter>=1.1.1",
    "lmstudio>=1.5.0",
    "openai>=2.21.0",
    "easyocr>=1.7.2",
    "lmstudio>=1.5.0",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pymupdf4llm>=0.3.4",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
